# n_puzzle

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  main.py
puzzles/: puzzle.txt  puzzle_3  puzzle_4  puzzle_5  puzzle_6  puzzle_7
src/algorithm/: a_star.py  a_start.py  node.py
src/data/: Puzzle.cpp  Puzzle.hpp  puzzle.py
src/utils/: parser.py
srcs/: Puzzle.cpp  Puzzle.hpp  main.cpp
